# og-gs2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Justfile  README.md
.zed/: debug.json
examples/: 01_hello_world.gs2
include/gs2/: ast.hpp  eval.hpp  lexer.hpp  value.hpp
src/: CMakeLists.txt  ast.cpp  ast.hpp  ast_print.cpp  ast_string.cpp  context.cpp  context.hpp  environment.cpp  environment.hpp  error.hpp  eval.cpp  eval.hpp  eval_expr.cpp  eval_stmt.cpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  registry.hpp  scope.hpp  script.cpp  script.hpp  value.cpp  value.hpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_eval_assign_expr.cpp  test_eval_call_expr.cpp  test_eval_literals.cpp  utils.hpp
